Generate jasmin code for class fields and methods' header (main annotation and parameters)