@@ -1,23 +1,33 @@
 package pt.up.fe.comp.jasmin;
 
+import org.specs.comp.ollir.ClassUnit;
 import pt.up.fe.comp.jmm.jasmin.JasminBackend;
 import pt.up.fe.comp.jmm.jasmin.JasminResult;
 import pt.up.fe.comp.jmm.ollir.OllirResult;
 import pt.up.fe.comp.jmm.report.Report;
+import pt.up.fe.comp.jmm.report.Stage;
 
 import java.util.ArrayList;
-import java.util.Collections;
 import java.util.List;
 
 public class JasminEmitter implements JasminBackend {
 
-    private final List<Report> reports = new ArrayList<>();
-
     @Override
     public JasminResult toJasmin(OllirResult ollirResult) {
-        String jasminCode = new OllirToJasmin(ollirResult.getOllirClass()).getJasminCode();
+        ClassUnit ollirClass = ollirResult.getOllirClass();
+        
+        try {
+            ollirClass.show(); // TO DEVELOPMENT PURPOSES
 
-        return new JasminResult(ollirResult, jasminCode, Collections.emptyList());
+            OllirToJasmin translationResult = new OllirToJasmin(ollirClass);
+            String jasminCode = translationResult.getJasminCode();
+            List<Report> reports = translationResult.getReports();
+
+            return new JasminResult(ollirResult, jasminCode, reports);
+        } catch (Exception e) {
+            return new JasminResult(ollirClass.getClassName(), null,
+                    List.of(Report.newError(Stage.GENERATION, -1, -1, "Exception during Jasmin generation", e)));
+        }
     }
 }
 
